[tool.poetry]
name = "repl_python3_yahooapi"
version = "0.1.0"
description = ""
authors = ["repl.it user <replituser@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
notifiers = "^1.2.1"
apprise = "^0.8.9"
imgkit = "^1.0.2"
prettytable = "^1.0.1"
markdownify = "^0.5.3"
arrow = "^0.17.0"
html2markdown = "^0.1.7"
sportradar = "^1.4.0"
pushover = "^0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
