[tool.poetry]
name = "repl_python3_yahooapi"
version = "0.1.0"
description = ""
authors = ["repl.it user <replituser@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
bs4 = "^0.0.1"
pandas = "^1.1.4"
prettytable = "^1.0.1"
sportradar = "^1.4.0"
arrow = "^0.17.0"
yfpy = "^3.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
